--- a/#src/index.html
+++ b/#src/index.html
@@ -15,24 +15,24 @@
         <div class="calc">
             <div class="calc__container">
                 <div class="calc__row">
-                    <div  class="calc__number"><button id="number">1</button></div>
-                    <div  class="calc__number"><button id="number">2</button></div>
-                    <div  class="calc__number"><button id="number">3</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">1</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">2</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">3</button></div>
                 </div>
                 <div class="calc__row">
                     <div id="buttonnumber" class="calc__number"><button>3</button></div>
-                    <div  class="calc__number"><button id="number">4</button></div>
-                    <div  class="calc__number"><button id="number">5</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">4</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">5</button></div>
                 </div>
                 <div class="calc__row">
-                    <div  class="calc__number"><button id="number">6</button></div>
-                    <div  class="calc__number"><button id="number">7</button></div>
-                    <div  class="calc__number"><button id="number">9</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">6</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">7</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">9</button></div>
                 </div>
                 <div class="calc__row">
-                    <div  class="calc__number"><button id="number">,</button></div>
-                    <div  class="calc__number"><button id="number">0</button></div>
-                    <div  class="calc__number"><button id="buttonResult">=</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">,</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="number">0</button></div>
+                    <div  class="calc__number"><button class="calc__number-inside" id="buttonResult">=</button></div>
                 </div>
                 <div class="calc__row-actions">
                     <div class="calc__first-number">
