--- a/#src/index.html
+++ b/#src/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="test">
-                <button id="testingButton">Тестировочка</button>
+                <button id="testingButton">Тестовая кнопандрия</button>
             </div>
         </div>
     </div>
