попытка улучшить кнопки

--- a/#src/index.html
+++ b/#src/index.html
@@ -46,15 +46,15 @@
                     <input readonly placeholder="Результат" id="resultInput">
                 </div>
                 <div class="calc__row">
-                    <div id="buttonPlus" class="calc__action"><button>+</button></div>
-                    <div id="buttonMinus" class="calc__action"><button>-</button></div>
-                    <div id="buttonMultipe" class="calc__action"><button>*</button></div>
-                    <div id="buttonDivide" class="calc__action"><button>/</button></div>
+                    <div id="buttonPlus" class="calc__action"><button class="calc__buttons">+</button></div>
+                    <div id="buttonMinus" class="calc__action"><button class="calc__buttons">-</button></div>
+                    <div id="buttonMultipe" class="calc__action"><button class="calc__buttons">*</button></div>
+                    <div id="buttonDivide" class="calc__action"><button class="calc__buttons">/</button></div>
                 </div>
             </div>
 
             <div class="test">
-                <button id="testingButton">Тестовая кнопандрия</button>
+                <button id="testingButton">Test</button>
             </div>
         </div>
     </div>
